// Code generated by sgen.exe,2022-05-18 09:13:08. DO NOT EDIT.
// versions: v1.0.0
// 如果确实需要修改,请修改后改文件名,可以移除文件名中的.gen,以防下次生成覆盖

syntax = "proto3";

package service;
option go_package = ".;protosService";

//来源于数据表
message SceneIntelligenceCondition {


    // @inject_tag: json:"id" gorm:"default:唯一主键;comment:唯一主键;size:19;"
    int64 id = 100;


    // @inject_tag: json:"intelligenceId" gorm:"default:场景ID;comment:场景ID;size:19;"
    int64 intelligenceId = 101;


    // @inject_tag: json:"conditionType" gorm:"default:条件类型;comment:条件类型;"
    int32 conditionType = 102;


    // @inject_tag: json:"desc" gorm:"default:天气描述;comment:天气描述;size:100;"
    string desc = 103;


    // @inject_tag: json:"weatherCountry" gorm:"default:国家;comment:国家;size:10;"
    string weatherCountry = 104;


    // @inject_tag: json:"weatherCity" gorm:"default:城市;comment:城市;size:10;"
    string weatherCity = 105;


    // @inject_tag: json:"weatherArea" gorm:"default:区域;comment:区域;size:10;"
    string weatherArea = 106;


    // @inject_tag: json:"weatherType" gorm:"default:天气类型;comment:天气类型;size:10;"
    int32 weatherType = 107;


    // @inject_tag: json:"weatherValue" gorm:"default:天气值;comment:天气值;size:50;"
    string weatherValue = 108;


    // @inject_tag: json:"weatherCompare" gorm:"default:条件比较（1为等于 2 大于 ....);comment:条件比较（1为等于 2 大于 ....);size:10;"
    int32 weatherCompare = 109;


    // @inject_tag: json:"timerWeeks" gorm:"default:定时周设置，逗号分隔(例如：0,1,2,3,4);comment:定时周设置，逗号分隔(例如：0,1,2,3,4);size:20;"
    string timerWeeks = 110;


    // @inject_tag: json:"timerValue" gorm:"default:定时的值设置（01:33);comment:定时的值设置（01:33);size:5;"
    string timerValue = 111;


    // @inject_tag: json:"deviceDid" gorm:"default:设备ID;comment:设备ID;size:14;"
    string deviceDid = 112;


    // @inject_tag: json:"devicePropKey" gorm:"default:设备功能的Key;comment:设备功能的Key;size:50;"
    string devicePropKey = 113;


    // @inject_tag: json:"devicePropCompare" gorm:"default:条件比较（1为等于 2 大于 ....);comment:条件比较（1为等于 2 大于 ....);size:10;"
    int32 devicePropCompare = 114;


    // @inject_tag: json:"devicePropValue" gorm:"default:设备属性条件值;comment:设备属性条件值;size:50;"
    string devicePropValue = 115;

}

message SceneIntelligenceConditionFilter {


    // @inject_tag: json:"id" gorm:"default:唯一主键;comment:唯一主键;size:19;"
    int64 id = 100;


    // @inject_tag: json:"intelligenceId" gorm:"default:场景ID;comment:场景ID;size:19;"
    int64 intelligenceId = 101;


    // @inject_tag: json:"conditionType" gorm:"default:条件类型;comment:条件类型;"
    int32 conditionType = 102;


    // @inject_tag: json:"desc" gorm:"default:天气描述;comment:天气描述;size:100;"
    string desc = 103;


    // @inject_tag: json:"weatherCountry" gorm:"default:国家;comment:国家;size:10;"
    string weatherCountry = 104;


    // @inject_tag: json:"weatherCity" gorm:"default:城市;comment:城市;size:10;"
    string weatherCity = 105;


    // @inject_tag: json:"weatherArea" gorm:"default:区域;comment:区域;size:10;"
    string weatherArea = 106;


    // @inject_tag: json:"weatherType" gorm:"default:天气类型;comment:天气类型;size:10;"
    int32 weatherType = 107;


    // @inject_tag: json:"weatherValue" gorm:"default:天气值;comment:天气值;size:50;"
    string weatherValue = 108;


    // @inject_tag: json:"weatherCompare" gorm:"default:条件比较（1为等于 2 大于 ....);comment:条件比较（1为等于 2 大于 ....);size:10;"
    int32 weatherCompare = 109;


    // @inject_tag: json:"timerWeeks" gorm:"default:定时周设置，逗号分隔(例如：0,1,2,3,4);comment:定时周设置，逗号分隔(例如：0,1,2,3,4);size:20;"
    string timerWeeks = 110;


    // @inject_tag: json:"timerValue" gorm:"default:定时的值设置（01:33);comment:定时的值设置（01:33);size:5;"
    string timerValue = 111;


    // @inject_tag: json:"deviceDid" gorm:"default:设备ID;comment:设备ID;size:14;"
    string deviceDid = 112;


    // @inject_tag: json:"devicePropKey" gorm:"default:设备功能的Key;comment:设备功能的Key;size:50;"
    string devicePropKey = 113;


    // @inject_tag: json:"devicePropCompare" gorm:"default:条件比较（1为等于 2 大于 ....);comment:条件比较（1为等于 2 大于 ....);size:10;"
    int32 devicePropCompare = 114;


    // @inject_tag: json:"devicePropValue" gorm:"default:设备属性条件值;comment:设备属性条件值;size:50;"
    string devicePropValue = 115;

}

message SceneIntelligenceConditionListRequest {
    SceneIntelligenceCondition query = 101;
    int64 page = 102;
    int64 pageSize = 103;
    string orderKey = 104;
    string orderDesc = 105;
    string searchKey = 106;
}

message SceneIntelligenceConditionResponse {
    int32 code = 101;
    string message = 102;
    int64 total = 103;
    repeated SceneIntelligenceCondition data = 104;
}

message SceneIntelligenceConditionUpdateFieldsRequest {
    repeated string fields = 101;
    SceneIntelligenceCondition data = 102;
}


// 表模型主键，只能是整数或字符串，若生成错误，请检查数据库表主键是否正确。支持组合主键
message SceneIntelligenceConditionPrimarykey {

    int64 id = 100;
}

message SceneIntelligenceConditionBatchDeleteRequest {
    repeated SceneIntelligenceConditionPrimarykey keys = 101;
}